--- a/public/.htaccess
+++ b/public/.htaccess
@@ -17,7 +17,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # RewriteRule ^(.*)$ index.php?/$1 [L]
 
 # if in subdir comment above line, uncomment below one and replace <OSPOS path> with your path
-RewriteRule ^(.*)$ /poseasy/public/index.php?/$1 [L]
+RewriteRule ^(.*)$ /pos/public/index.php?/$1 [L]
 
 # disable directory browsing
 # For security reasons, Option all cannot be overridden.
